--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Explore California: Contact Us</title>
+		<title>Explore California: Contact</title>
 		<link
 			href="assets/stylesheets/main.css"
 			rel="stylesheet"
